<resources>

    <string name="app_name">Places Test Task</string>
    <string name="my_email">siarhei.luskanau@gmail.com</string>

    <string name="nav_home">Home</string>
    <string name="nav_places">Places</string>
    <string name="nav_place_details">Place Details</string>
    <string name="nav_task_description">Task description</string>
    <string name="nav_source_code">Source code</string>
    <string name="nav_my_linkedIn">My LinkedIn</string>

    <string name="place_detail_show_on_map">Show on map</string>
    <string name="place_distance">%d m</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_place_not_found">Cannot retrieve place data. Check your internet connection</string>

</resources>