<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_places" />
        <item
            android:id="@+id/nav_attachment"
            android:icon="@drawable/ic_attachment"
            android:title="@string/nav_task_description" />
        <item
            android:id="@+id/nav_github"
            android:icon="@drawable/ic_github_box"
            android:title="@string/nav_source_code" />
        <item
            android:id="@+id/nav_linkedin"
            android:icon="@drawable/ic_linkedin_box"
            android:title="@string/nav_my_linkedIn"
            android:visible="false" />
    </group>
</menu>